.salus/development/organization-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salus-2e65d758-96d8-458c-891f-adcc9e026589-ingress-two
  namespace: testenterprisespace--production-333062706
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-nginx
    kubernetes.io/ingress.allow-http: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: /swagger$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sweet-jang-2e65d758.salus.dev
      secretName: sweet-jang-2e65d758-d-salus-d-dev-key
    - hosts:
        - pathbasedroute.salus.dev
      secretName: pathbasedroute-d-salus-d-dev-key
  rules:
    - host: sweet-jang-2e65d758.salus.dev
      http:
        paths:
          - path: /swaggers()(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-organization-service
                port:
                  number: 80
    - host: pathbasedroute.salus.dev
      http:
        paths:
          - path: /organization/swagger()(.*)
            pathType: Prefix
            backend:
              service:
                name: demo-organization-service
                port:
                  number: 80
